Prevent iframe wrap (to under nav bar) when window is sized small.

--- a/web/c/crms/css/review.css
+++ b/web/c/crms/css/review.css
@@ -20,14 +20,16 @@ h3 {
 
 body {
   margin-top: 3px;
+  height: 100%;
+  width: 100%;
 }
 
 
-.divbody   { float:left; width:99%; position: relative; min-width:1000px; }
+.divbody   { float:left; width:99%;}
 
 .divNav    { float:left; width:210px;}
 
-.divFrame  { float:left; width:82%;   padding-left:2px; padding-right:2px; }
+.divFrame  { float:left; width:100%; height:100%; border-left: 1px solid #72859a; position:absolute; left:210px; top:0px;}
 
 .navtop    {
   text-align:center; 
@@ -35,7 +37,7 @@ body {
   font-size:12px;
 }
 
-.navbottom  { 
+.navbottom  {
   text-align:left; 
   vertical-align:bottom;  
   border-bottom: 1px solid #72859a;
@@ -55,73 +57,73 @@ table {
 }
 
 
-table.nav    { 
-        border-bottom: 1px solid #72859a;
-        font-size:12px;
+table.nav { 
+  border-bottom: 1px solid #72859a;
+  font-size:12px;
         
 }
 
 table.nav th { 
-        padding: 1px 1px 1px 1px;
+  padding: 1px 1px 1px 1px;
 }
 
 table.nav td {
-        padding: 0px 0px 0px 0px;
-        text-align:center;
+  padding: 0px 0px 0px 0px;
+  text-align:center;
 }
 
-table.id    { 
-        border-spacing: 2px;
-        border-collapse: separate;
-        border-bottom: 1px solid #72859a;
-        background-color: #d0dee6;
-        font-size:12px;
+table.id { 
+  border-spacing: 2px;
+  border-collapse: separate;
+  border-bottom: 1px solid #72859a;
+  background-color: #d0dee6;
+  font-size:12px;
 }
 
 table.id th { 
-        padding: 1px;
+  padding: 1px;
 }
 
 table.id td {
-        padding: 0px 0px 0px 0px;
-        text-align:left;
+  padding: 0px 0px 0px 0px;
+  text-align:left;
 }
 
-table.search    { 
-        border-collapse: separate;
-        border-bottom: 1px solid #72859a;
-        background-color:#e2e2e2;
-        font-size:12px;
+table.search { 
+  border-collapse: separate;
+  border-bottom: 1px solid #72859a;
+  background-color:#e2e2e2;
+  font-size:12px;
 }
 
 table.search th { 
-        padding: 1px;
+  padding: 1px;
 }
 
 table.search td {
-        padding: 0px 0px 0px 0px;  
+  padding: 0px 0px 0px 0px;  
 }
 
-table.display    { 
-        border-spacing: 2px;
-        border-collapse: separate;
-        border-bottom: 1px solid #72859a;
-        background-color: #d0dee6;
-        font-size:12px;
+table.display { 
+  border-spacing: 2px;
+  border-collapse: separate;
+  border-bottom: 1px solid #72859a;
+  background-color: #d0dee6;
+  font-size:12px;
 }
 
 table.display th { 
-        padding: 1px 1px 1px 1px;
-        border-style: inset inset inset inset;
-        border-color: white black white black;
+  padding: 1px 1px 1px 1px;
+  border-style: inset inset inset inset;
+  border-color: white black white black;
 }
 
 table.display td {
-        border-width: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
-        border-style: inset inset inset inset;
-        border-color: white white white white;
-        text-align:left;
+  border-width: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  border-style: inset inset inset inset;
+  border-color: white white white white;
+  text-align:left;
 }
 
 div#RightsCont {
@@ -134,12 +136,10 @@ div#RightsCont {
   font-size:12px;
 }
 
-div#Magnification {
-  padding-top: 5px;
-  padding-bottom: 5px;
+table.ReviewError {
+  border-top: 1px solid #72859a;
   background-color: #e2e2e2;
   font-size:12px;
-  border-top: 1px solid #72859a;
 }
 
 #Notes {
@@ -155,19 +155,19 @@ div#Magnification {
   margin-top: 8px;
 }
 
-table.test    { 
-        border-collapse: separate;
-        border-bottom: 1px solid #72859a;
-        background-color:#e2e2e2;
-        font-size:12px;
+table.test {
+  border-collapse: separate;
+  border-bottom: 1px solid #72859a;
+  background-color:#e2e2e2;
+  font-size:12px;
 }
 
 table.test th { 
-        padding: 1px;
+  padding: 1px;
 }
 
 table.test td {
-        text-align:left;
+  text-align:left;
 }
 
 input#getDate {
